통계 데이터 추출 완료

--- a/testcode/index.html
+++ b/testcode/index.html
@@ -9,6 +9,7 @@
     <h1>Analytics Test Page</h1>
     <p>This is a test page for the analytics system.</p>
     <a href="https://www.example.com" target="_blank">External Link</a>
+    <a href="https://www.google.com" target="_blank">External Link</a>
 
     <script>
         // 페이지뷰 데이터 전송
