♻️ 세션 ID 코드 변경

--- a/testcode/index.html
+++ b/testcode/index.html
@@ -26,20 +26,26 @@
             }
             return response.json();
         })
-        .then(data => console.log(data))
+        .then(data => {
+            sessionStorage.setItem('session_id', data.session_id)
+            console.log(data)
+        })
         .catch(error => console.error('Error:', error));
 
         // 앵커 클릭 이벤트 리스너 등록
         document.addEventListener('click', function(event) {
             if (event.target.tagName === 'A') {
-                
+                var session_id = sessionStorage.getItem('session_id');
+
                 const source_url = window.location.href;
                 const target_url = event.target.href;
+                console.log(session_id);
 
                 fetch('https://www.analytics.weniv.co.kr/collect/anchor-click', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        'Session-Id':session_id
                     },
                     body: JSON.stringify({source_url, target_url})
                 })
